--- a/cruxtech/src/index.css
+++ b/cruxtech/src/index.css
@@ -1,7 +1,7 @@
-@import "tailwindcss"; 
+@import "tailwindcss";
 
-@layer components{
-  body{
-    @apply m-0 p-0
+@layer base {
+  body {
+    @apply m-0 p-0 bg-[url('/src/assets/bg.jpg')] text-white;
   }
 }
